--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Expression adder</title>
     <script type="module" src="js/app.js"></script>
     <link type="text/css" rel="stylesheet" href="css/styles.css" />
-</head>
-<body>
-    <h1>Expression adder</h1>
-    <label for="inputs-form">
-        Add two expressions
-    </label>
+  </head>
+  <body>
+    <h1>Form for adding two expressions</h1>
     <p>
+      <small>
         ex:<br />
         2x^2 + 3 = [ [2, 2], [3] ]<br />
         3x^3 + x^2 = [ [3,3], [1,2] ]<br />
+      </small>
     </p>
     <form id="inputs-form">
-        <label for="input-one">Expresions:</label>
-        <input type="text" id="input-one" />
-        <input type="text" id="input-two" />
-        <input type="submit" value="Add" />
+      <label for="input-one">expr.:</label>
+      <input type="text" id="input-one" />
+      <input type="text" id="input-two" />
+      <input type="submit" value="Add" />
     </form>
-    <p>
+    <div id="result-box" style="display: none;">
+      <p>
         <span>Result:</span>
-    </p>
-    <span id="result"></span>
-</body>
+        <span id="result"></span>
+      </p>
+      <p>
+        <span>Mathematical notation:</span><br />
+        <span id="pretty-print"></span>
+      </p>
+    </div>
+  </body>
 </html>
